--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,11 +27,11 @@ spring.datasource.initial-size=5
 #2.1jdbc驱动，示数据库厂商决定，这是mysql的驱动
 jdbc.driver=com.mysql.cj.jdbc.Driver
 #2.2数据库连接url，包括ip(127.0.0.1)、端口(3306)、数据库名(testdb)
-jdbc.url=jdbc:mysql://localhost:3306/hjjczz?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+jdbc.url=jdbc:mysql://rm-bp181eu032u9fohk7so.mysql.rds.aliyuncs.com:3306/first?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
 #2.3数据库账号名
-jdbc.username=root
+jdbc.username=yang
 #2.4数据库密码
-jdbc.password=mysql
+jdbc.password=qwe!@#RTY
 
 #3.Mybatis配置
 #3.1 mybatis配置文件所在路径
@@ -39,6 +39,6 @@ mybatis_config_file=mybatis-config.xml
 #3.2 mapper文件所在路径，这样写可匹配mapper目录下的所有mapper，包括其子目录下的
 mapper_path=/mapper/**/**.xml
 #3.3 entity所在包
-entity_package=com.sxxa.hjjczz.entity
+entity_package=com.github.binarywang.demo.wx.mp.entity
 #3.3 mybits输出查询SQL语句
 logging.level.com.sxxa.hjjczz.dao=trace
